BG Rene image fix?

--- a/style.css
+++ b/style.css
@@ -543,7 +543,7 @@ table img{
 }
 
 #papaBG {
-	background-image: url("./images/papa.jpg");
+	background-image: url("./images/Papa.jpg");
 	background-size: cover;
 	width: 1200px;
 	height: 510px;	
