--- a/style.css
+++ b/style.css
@@ -391,11 +391,10 @@ ul li:hover a {
 
 /*FOOTER------------------------------------------------------------*/
 #footer {
-	position: absolute;
+	position: relative;
 	background-color: #262626;
 	width: 100%; max-width: 100%;
 	height: 60px; max-height: 60px;
-	bottom: 0px;
 
 	box-shadow: 0px -5px 20px rgba(0, 0, 0, .2);
 	font-size: 14px;
