--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body, html {
 	position: relative;
 	width: 1200px;
 	background-color: white;
-	min-height: 100%;
+	/*min-height: 100%;*/
 
 	box-shadow: 0px 5px 20px rgba(0, 0, 0, .2);
 }
@@ -395,6 +395,7 @@ ul li:hover a {
 	background-color: #262626;
 	width: 100%; max-width: 100%;
 	height: 60px; max-height: 60px;
+	margin-top: 60px;
 
 	box-shadow: 0px -5px 20px rgba(0, 0, 0, .2);
 	font-size: 14px;
