--- a/style.css
+++ b/style.css
@@ -547,7 +547,7 @@ table img{
 	background-size: cover;
 	width: 1200px;
 	height: 510px;	
-	margin-top: 30px; margin-bottom: 120px;
+	margin-top: 30px;
 	padding: 30px 0 30px 0;
 }
 #papaBG p {
