--- a/style.css
+++ b/style.css
@@ -508,7 +508,7 @@ table img{
 }
 
 #table {
-	padding-bottom: 130px;
+	/*padding-bottom: 130px;*/
 }
 
 #table .extraRow td {
@@ -547,7 +547,7 @@ table img{
 	background-size: cover;
 	width: 1200px;
 	height: 510px;	
-	margin-top: 30px;
+	margin-top: 30px; margin-bottom: -60px;
 	padding: 30px 0 30px 0;
 }
 #papaBG p {
