Revert "Directory change + deleted unused font"
This reverts commit 9d492887392c85e4464794d90c165e6d062b0cdf.

--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
 }
 
 @font-face {
+	font-family: logoFont;
+	src: url(ERASBD.TTF);
+}
+
+@font-face {
 	font-family: navFont;
 	src: url(ERASLGHT.TTF);
 }
