--- a/style.css
+++ b/style.css
@@ -799,59 +799,102 @@ input[name=verzendknop]:hover, input[name=Verzendknop]:focus {
 
 	
 	/*NAV STYLING*/
+	#navWrapper {
+		position: relative;
+		margin: auto;
+		display: inline-block;
+		width: initial;
+		text-align: justify;
+		top: 20%;
+		left: 55%;
+		font-size: 32px;
+		transform: translateX(-50%);
+	}
+
+	#menuFooter {
+		position: fixed;
+		bottom: 0;
+		width: 100%;
+
+		font-family: customFont;
+		font-size: 18px;
+		color: #ababab;
+	}
+	#menuFooter p {
+		text-align: center;
+	}
+	#menuFooter p:first-child {
+		margin-bottom: 10px;
+	}
+	#menuFooter p:last-child {
+		margin-top: 0px;
+		font-style: italic;
+	}
+
 	ul, li {
 		margin: 0; padding: 0;
 	}
 
 	ul li {
-		float: left;
-		background-color: white;
-		padding: 5px 0 5px 0;
-		width: 191px;
-		z-index: -1;
+		float: initial;
+		background-color: #262626;
+		padding: 0 0 0 0;
+		width: 200px;
+		z-index: 10;
 
-		text-align: center;
+		text-align: left;
 		list-style-type: none;
 
-		cursor: pointer;
-		border-right: 1px solid #262626;
+		border-right: initial;
 		box-sizing: border-box;
-	}
-
-	ul li:nth-child(1) {
-		margin-left: 0;
 	}
 
 	ul li a {
 		display: block;
-		padding-bottom: 3px;
+		padding-bottom: 14px;
 		text-decoration: none;
-		color: #262626;
+		color: #fff;
 		height: 100%;
-		width: 100%;
+		width: initial;
+	}
+	.firstNavItem {
+		padding-bottom: 0px;
+	}
+	.secondNavItem {
+		padding-top: 14px;
+	}
+
+	ul li ul li a:first-child {
+		padding-bottom: 0px;
 	}
 
 	ul li ul li {
-		visibility: hidden;
-		padding: 5px 0 5px 0;
-		margin-bottom: 80px;
-		opacity: 0;
-		background-color: white;
-		z-index: 1;
+		display: block;
+		visibility: visible;
+		padding: 0 0 0px 30px;
+		margin-bottom: 0;
+		opacity: 1;
+		background-color: #262626;
+		z-index: 10;
 
-		transform: translateY(-1em);
-		transition: transform 0.15s ease-in-out 0s, opacity .2s ease-in, z-index .1s linear;
+		transform: translateY(0);
+		transition: initial;
+	}
+
+	ul li ul li a {
+		color: #fff;
+
 	}
 
 	ul li ul {
 		display: block;
-		position: absolute;
-		width: 150px;
-		z-index: -1;
+		position: relative;
+		width: 100%;
+		z-index: 10;
 	}
 
 	ul li:hover {
-		background-color: #f5f5f5;
+		background-color: #262626;
 	}
 
 	ul li:hover ul li {
@@ -859,30 +902,29 @@ input[name=verzendknop]:hover, input[name=Verzendknop]:focus {
 		visibility: visible;
 		position: relative;
 		opacity: 1;
-		margin: 0;
-		padding: 5px 0 5px 0;
+		padding: 0 0 5px 20px;
 		z-index: 1;
 
-		transform: translateY(10%);
+		transform: translateY(0);
 		transition-delay: 0s, 0s, 0.3s;
 	}
 
 	ul li:hover ul {
-		z-index: 1;
+		z-index: inherit;
 	}
 
 	ul li:hover a {
-		color: #262626;
+		color: initial;
+	}
+
+	#menuNavActive a {
+		color: #ba473e;
+	}
+
+	#menuNavNotActive a {
+		color: #fff;
 	}
 	/*END NAV STYLING*/
-
-	#menuNavActive {
-		color: #ba473e;
-	}
-
-	#menuNavNotActive {
-		color: #ba473e;
-	}
 
 	body, html {
 		position: relative;
@@ -1051,13 +1093,18 @@ input[name=verzendknop]:hover, input[name=Verzendknop]:focus {
 		width: 100%;
 		margin: auto;
 	}
+
+	#mapsImg img {
+		width: 100%;
+	}
+
 }
 
 
 /*VARY INDEX.HTML THUMBNAIL FONTSIZE/POSITION < 700*/
 @media only screen and (max-width: 700px) {
-	#phone_ab_keuze_kopje, #phone_fig_keuze_kopje {
 
+	#phone_ab_keuze_kopje, #phone_fig_keuze_kopje {
 		top: 55%;
 		transform: translateY(-46%);
 
@@ -1068,8 +1115,8 @@ input[name=verzendknop]:hover, input[name=Verzendknop]:focus {
 
 /*VARY INDEX.HTML THUMBNAIL FONTSIZE/POSITION < 600*/
 @media only screen and (max-width: 600px) {
-	#phone_ab_keuze_kopje, #phone_fig_keuze_kopje {
 
+	#phone_ab_keuze_kopje, #phone_fig_keuze_kopje {
 		top: 55%;
 		transform: translateY(-46%);
 
@@ -1078,14 +1125,33 @@ input[name=verzendknop]:hover, input[name=Verzendknop]:focus {
 	}
 }
 
-/*VARY INDEX.HTML THUMBNAIL FONTSIZE/POSITION < 500*/
+/*VARY INDEX.HTML THUMBNAIL FONTSIZE/POSITION
+*
+MENU BUTTON POSITION < 500
+*
+*/
 @media only screen and (max-width: 500px) {
-	#phone_ab_keuze_kopje, #phone_fig_keuze_kopje {
 
+	#phone_ab_keuze_kopje, #phone_fig_keuze_kopje {
 		top: 55%;
 		transform: translateY(-46%);
 
-		font-size: 60px;
+		font-size: 56px;
 		font-weight: 500;
+	}
+
+	.menuBtn {
+		position: fixed;
+		top: 0px; left: 8px;
+		width: 70px; height: 84px;
+		z-index: 99;
+	}
+
+	#navWrapper {
+		text-align: justify;
+		top: 8%;
+		left: 60%;
+		font-size: 26px;
+		transform: translateX(-40%);
 	}
 }
