--- a/style.css
+++ b/style.css
@@ -145,13 +145,12 @@ ul li a {
 ul li ul li {
 	visibility: hidden;
 	padding: 5px 0 5px 0;
-	margin-bottom: 80px;
 	opacity: 0;
 	background-color: white;
 	z-index: 1;
 
-	transform: translateY(-1em);
-	transition: transform 0.15s ease-in-out 0s, opacity .2s ease-in, z-index .1s linear;
+	transform: initial;
+	transition: initial;
 }
 
 ul li ul {
@@ -162,7 +161,7 @@ ul li ul {
 }
 
 ul li:hover {
-	background-color: #f5f5f5;
+	background-color: #262626;
 }
 
 ul li:hover ul li {
@@ -174,7 +173,7 @@ ul li:hover ul li {
 	padding: 5px 0 5px 0;
 	z-index: 1;
 
-	transform: translateY(10%);
+	transform: initial;
 	transition-delay: 0s, 0s, 0.3s;
 }
 
@@ -183,7 +182,7 @@ ul li:hover ul {
 }
 
 ul li:hover a {
-	color: #262626;
+	color: #fff;
 }
 
 #navActive {
@@ -815,6 +814,8 @@ input[name=verzendknop]:hover, input[name=Verzendknop]:focus {
 		position: fixed;
 		bottom: 0;
 		width: 100%;
+		padding-right: 16px; padding-left: 16px;
+		box-sizing: border-box;
 
 		font-family: customFont;
 		font-size: 18px;
@@ -850,7 +851,7 @@ input[name=verzendknop]:hover, input[name=Verzendknop]:focus {
 	}
 
 	ul li a {
-		display: block;
+		display: inline-block;
 		padding-bottom: 14px;
 		text-decoration: none;
 		color: #fff;
@@ -920,6 +921,14 @@ input[name=verzendknop]:hover, input[name=Verzendknop]:focus {
 	#menuNavActive a {
 		color: #ba473e;
 	}
+	
+	ul li a:active {
+		color: #fff;
+	}
+
+	ul li a:visited {
+		color: #fff;
+	}
 
 	#menuNavNotActive a {
 		color: #fff;
@@ -937,6 +946,10 @@ input[name=verzendknop]:hover, input[name=Verzendknop]:focus {
 		font-family: customFont;
 		font-size: 22px;
 		color: #262626;
+	}
+
+	.contentHidden {
+		overflow: hidden;
 	}
 
 	#phone_header {
@@ -1088,6 +1101,9 @@ input[name=verzendknop]:hover, input[name=Verzendknop]:focus {
 		font-size: 18px;
 		text-align: center;
 		width: 100%;
+		padding-right: 16px;
+		padding-left: 16px;
+		box-sizing: border-box;
 	}
 	#creator p {
 		width: 100%;
