info_holder fix on low width screens?

--- a/style.css
+++ b/style.css
@@ -1189,9 +1189,10 @@ input[name=verzendknop]:hover, input[name=Verzendknop]:focus {
 		position: relative;
 		display: block;
 		margin: auto;
+		margin-left: 10%;
 		left: 20%;
 		height: initial; 	
-		width: 400px;
+		width: 100%;
 
 		opacity: 1;
 		transition: opacity .2s, margin-top .6s ease;
@@ -1199,8 +1200,9 @@ input[name=verzendknop]:hover, input[name=Verzendknop]:focus {
 
 	#info_holder table {
 		position: relative;
-		width: 100%;
+		width: 80%;
 		float: none;
+		margin-left: 0;
 		clear: both;
 	}
 
@@ -1241,11 +1243,11 @@ input[name=verzendknop]:hover, input[name=Verzendknop]:focus {
 	}
 
 	#arrow_left {
-		display: none;
+		/*display: none;*/
 	}
 
 	#arrow_right {
-		display: none;
+		/*display: none;*/
 	}
 }
 
@@ -1285,5 +1287,17 @@ input[name=verzendknop]:hover, input[name=Verzendknop]:focus {
 		left: 60%;
 		font-size: 26px;
 		transform: translateX(-40%);
+	}
+
+	#info_holder {
+		position: relative;
+		display: block;
+		margin: auto;
+		left: 40%;
+		height: initial; 	
+		width: 100%;
+
+		opacity: 1;
+		transition: opacity .2s, margin-top .6s ease;
 	}
 }
