--- a/style.css
+++ b/style.css
@@ -1158,8 +1158,8 @@ input[name=verzendknop]:hover, input[name=Verzendknop]:focus {
 		background-size: cover;
 		width: 100%;
 		height: initial;
-		margin-top: 30px; margin-bottom: 60px;
-		padding: 0px 0 30px 0;
+		margin-top: 30px; margin-bottom: 30px;
+		padding: 0 0 30px 0;
 	}
 
 	#papaBG p {
@@ -1173,7 +1173,6 @@ input[name=verzendknop]:hover, input[name=Verzendknop]:focus {
 
 	#mobilePar {
 		display: block;
-		margin-top: 120px;
 	}
 
 	#overMij {
