--- a/style.css
+++ b/style.css
@@ -781,6 +781,10 @@ input[name=verzendknop]:hover, input[name=Verzendknop]:focus {
 	display: none;
 }
 
+.ui-loader, .ui-corner-all, .ui-body-a, .ui-loader-default {
+	display: none;
+}
+
 /*FOR SCREENS < 800*/
 @media only screen and (max-width: 1200px) {
 
